K1J-2190: Fix tests and update test to assert that the right thing is tested.